Opened 12 years ago

Closed 12 years ago

#3456 closed defect (fixed)

crash in h263 video encoding

Reported by: Roger Pack Owned by:
Priority: important Component: avcodec
Version: git-master Keywords: crash SIGSEGV regression
Cc: Blocked By:
Blocking: Reproduced by developer: yes
Analyzed by developer: no

Description (last modified by Carl Eugen Hoyos)

Summary of the bug: segfault in some sse code with the h263 video encoder.

NB I could only reproduce this on intel processors seemingly, not my AMD box. FWIW.

How to reproduce:

% ffmpeg  -y -f lavfi -i testsrc -vf scale=256:144,crop=176:144:40:0  -an  -f 3gp a.3gp
ffmpeg version N-61143-g64e4bd7 Copyright (c) 2000-2014 the FFmpeg developers
  built on Mar  6 2014 17:25:54 with gcc 4.8.2 (GCC)
  configuration: --arch=x86 --target-os=mingw32 --cross-prefix=/home/rogerdpack/dev/ffmpeg-windows-build-helpers/sandbox/mingw-w64-i686/bin/i686-w64-mingw32- --pkg-config=pkg-config --enable-gpl --enable-libx264 --enable-avisynth --enable-libxvid --enable-libmp3lame --enable-version3 --enable-zlib --enable-librtmp --enable-libvorbis --enable-libtheora --enable-libspeex --enable-libopenjpeg --enable-gnutls --enable-libgsm --enable-libfreetype --enable-libopus --disable-w32threads --enable-frei0r --enable-filter=frei0r --enable-libvo-aacenc --enable-bzlib --enable-libxavs --extra-cflags=-DPTW32_STATIC_LIB --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libvo-amrwbenc --enable-libschroedinger --enable-libvpx --enable-libilbc --prefix=/home/rogerdpack/dev/ffmpeg-windows-build-helpers/sandbox/mingw-w64-i686/i686-w64-mingw32 --enable-static --disable-shared --enable-libsoxr --enable-fontconfig --enable-libass --enable-libutvideo --enable-libbluray --enable-iconv --enable-libtwolame --extra-cflags=-DLIBTWOLAME_STATIC --enable-libzvbi --enable-libcaca --enable-libmodplug --extra-libs=-lstdc++ --extra-libs=-lpng --enable-libvidstab --enable-libx265 --extra-cflags= --extra-cflags= --enable-runtime-cpudetect
  libavutil      52. 66.101 / 52. 66.101
  libavcodec     55. 52.102 / 55. 52.102
  libavformat    55. 33.101 / 55. 33.101
  libavdevice    55. 11.100 / 55. 11.100
  libavfilter     4.  3.100 /  4.  3.100
  libswscale      2.  5.101 /  2.  5.101
  libswresample   0. 18.100 /  0. 18.100
  libpostproc    52.  3.100 / 52.  3.100
Input #0, lavfi, from 'testsrc':
  Duration: N/A, start: 0.000000, bitrate: N/A
    Stream #0:0: Video: rawvideo (RGB[24] / 0x18424752), rgb24, 320x240 [SAR 1:1 DAR 4:3], 25 tbr, 25 tbn, 25 tbc
Output #0, 3gp, to 'a.3gp':
  Metadata:
    encoder         : Lavf55.33.101
    Stream #0:0: Video: h263 (s263 / 0x33363273), yuv420p, 176x144 [SAR 3:4 DAR 11:12], q=2-31, 200 kb/s, 12800 tbn, 25 tbc
Stream mapping:
  Stream #0:0 -> #0:0 (rawvideo -> h263)
Press [q] to stop, [?] for help

(hard crash).

gdb bt at crash time:

Program received signal SIGSEGV, Segmentation fault.
0x00aca839 in sad16_sse2 () at libavcodec/x86/motion_est.c:102
102     libavcodec/x86/motion_est.c: No such file or directory.
        in libavcodec/x86/motion_est.c
(gdb) bt
#0  0x00aca839 in sad16_sse2 () at libavcodec/x86/motion_est.c:102
#1  0x009aa4e4 in ff_epzs_motion_search ()
#2  0x009afd9a in ff_estimate_p_frame_motion ()
#3  0x00694f6c in estimate_motion_thread () at libavcodec/mpegvideo_enc.c:2528
#4  0x005c8b0c in avcodec_default_execute () at libavcodec/utils.c:1060
#5  0x006965b5 in ff_MPV_encode_picture () at libavcodec/mpegvideo_enc.c:3418
#6  0x005c95c4 in avcodec_encode_video2 () at libavcodec/utils.c:1892
#7  0x00418b3f in reap_filters () at ffmpeg.c:997
#8  0x0160cad5 in main () at ffmpeg.c:3399

Also of note, this version of ffmpeg did not seem to exhibit the problem:

ffmpeg version N-59140-ga8d7028 Copyright (c) 2000-2013 the FFmpeg developers

built on Dec 16 2013 08:29:51 with gcc 4.8.1 (GCC)

Also of note: seems reproducible on both linux and windows.

Change History (3)

comment:1 by Roger Pack, 12 years ago

(current work around: configure it with --disable-sse2)

comment:2 by Carl Eugen Hoyos, 12 years ago

Component: undeterminedavcodec
Description: modified (diff)
Keywords: crash SIGSEGV regression added
Priority: normalimportant
Reproduced by developer: set
Status: newopen
Version: unspecifiedgit-master

Regression since d83707c6

For future tickets: Please always provide all information requested for crash reports on https://ffmpeg.org/bugreports.html

(gdb) r -f lavfi -i testsrc -vf scale=256:144,crop=176:144:40:0 -threads 1 -vcodec h263 -f null -
Starting program: /home/cehoyos/test/cehoyos/FFmpeg/ffmpeg_g -f lavfi -i testsrc -vf scale=256:144,crop=176:144:40:0 -threads 1 -vcodec h263 -f null -
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/lib64/libthread_db.so.1".
ffmpeg version N-61339-g7d7487e Copyright (c) 2000-2014 the FFmpeg developers
  built on Mar 13 2014 08:20:43 with gcc 4.7 (SUSE Linux)
  configuration: --enable-gpl
  libavutil      52. 66.101 / 52. 66.101
  libavcodec     55. 52.102 / 55. 52.102
  libavformat    55. 34.101 / 55. 34.101
  libavdevice    55. 11.100 / 55. 11.100
  libavfilter     4.  3.100 /  4.  3.100
  libswscale      2.  5.101 /  2.  5.101
  libswresample   0. 18.100 /  0. 18.100
  libpostproc    52.  3.100 / 52.  3.100
[New Thread 0x7ffff57e5700 (LWP 15221)]
[New Thread 0x7ffff4fe4700 (LWP 15222)]
[New Thread 0x7ffff47e3700 (LWP 15223)]
[New Thread 0x7ffff3fe2700 (LWP 15224)]
[New Thread 0x7ffff37e1700 (LWP 15225)]
[New Thread 0x7ffff2fe0700 (LWP 15226)]
[New Thread 0x7ffff27df700 (LWP 15227)]
[New Thread 0x7ffff1fde700 (LWP 15228)]
[New Thread 0x7ffff17dd700 (LWP 15229)]
Input #0, lavfi, from 'testsrc':
  Duration: N/A, start: 0.000000, bitrate: N/A
    Stream #0:0: Video: rawvideo (RGB[24] / 0x18424752), rgb24, 320x240 [SAR 1:1 DAR 4:3], 25 tbr, 25 tbn, 25 tbc
Output #0, null, to 'pipe:':
  Metadata:
    encoder         : Lavf55.34.101
    Stream #0:0: Video: h263, yuv420p, 176x144 [SAR 3:4 DAR 11:12], q=2-31, 200 kb/s, 90k tbn, 25 tbc
Stream mapping:
  Stream #0:0 -> #0:0 (rawvideo -> h263)
Press [q] to stop, [?] for help

Program received signal SIGSEGV, Segmentation fault.
0x0000000000b64909 in sad16_sse2 (v=0x18f3380, blk2=0x1918968 'R' <repeats 22 times>, "QT\217\221\221\222\223\215si", 'k' <repeats 23 times>, "i+", ')' <repeats 29 times>, "(/\315\323\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322Г\220\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\222\203kijkm\250\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\254\351\353\353\353\353\353\353\353\353\353\353\353\353\353\353", <incomplete sequence \353>..., blk1=0x1929ac0 'R' <repeats 17 times>, "NUSRSNP\221\217\217\220\217\205ui", 'k' <repeats 24 times>, ')' <repeats 24 times>, "********\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322ґ\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\224\213~qjjnq\252\251\247\257\246\254\253\257\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\254"..., stride=256, h=h@entry=16) at libavcodec/x86/motion_est.c:102
102         __asm__ volatile(
(gdb) bt
#0  0x0000000000b64909 in sad16_sse2 (v=0x18f3380, blk2=0x1918968 'R' <repeats 22 times>, "QT\217\221\221\222\223\215si", 'k' <repeats 23 times>, "i+", ')' <repeats 29 times>, "(/\315\323\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322Г\220\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\222\203kijkm\250\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\254\351\353\353\353\353\353\353\353\353\353\353\353\353\353\353", <incomplete sequence \353>..., blk1=0x1929ac0 'R' <repeats 17 times>, "NUSRSNP\221\217\217\220\217\205ui", 'k' <repeats 24 times>, ')' <repeats 24 times>, "********\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322\322ґ\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\221\224\213~qjjnq\252\251\247\257\246\254\253\257\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\252\254"..., stride=256, h=h@entry=16) at libavcodec/x86/motion_est.c:102
#1  0x0000000000c36200 in cmp_inline (chroma=0, qpel=0, chroma_cmp_func=<optimized out>, cmp_func=0xb648f0 <sad16_sse2>, src_index=0, ref_index=0, h=16, size=0, suby=0, subx=0, y=0, x=0, s=0x18f3380) at libavcodec/motion_est.c:208
#2  cmp_simple (cmp_func=0xb648f0 <sad16_sse2>, src_index=0, ref_index=0, y=0, x=0, s=0x18f3380, chroma_cmp_func=<optimized out>) at libavcodec/motion_est.c:225
#3  cmp (flags=0, chroma_cmp_func=<optimized out>, cmp_func=0xb648f0 <sad16_sse2>, src_index=0, ref_index=0, h=16, size=0, suby=0, subx=0, y=0, x=0, s=0x18f3380) at libavcodec/motion_est.c:257
#4  epzs_motion_search_internal (h=16, size=0, flags=0, ref_mv_scale=32768, last_mv=0x18e6774, ref_index=0, src_index=0, P=0x7fffffffd230, my_ptr=0x7fffffffd3e4, mx_ptr=0x7fffffffd3e0, s=0x18f3380) at libavcodec/motion_est_template.c:890
#5  ff_epzs_motion_search (s=s@entry=0x18f3380, mx_ptr=mx_ptr@entry=0x7fffffffd3e0, my_ptr=my_ptr@entry=0x7fffffffd3e4, P=P@entry=0x7fffffffd3f0, src_index=src_index@entry=0, ref_index=ref_index@entry=0, last_mv=0x18e6774, ref_mv_scale=ref_mv_scale@entry=32768, size=size@entry=0, h=h@entry=16) at libavcodec/motion_est_template.c:980
#6  0x0000000000c3af70 in ff_estimate_p_frame_motion (s=0x18f3380, mb_x=0, mb_y=0) at libavcodec/motion_est.c:947
#7  0x0000000000965d55 in estimate_motion_thread (c=<optimized out>, arg=<optimized out>) at libavcodec/mpegvideo_enc.c:2528
#8  0x0000000000a57457 in avcodec_default_execute (c=0x18f2d40, func=0x965ce0 <estimate_motion_thread>, arg=<optimized out>, ret=<optimized out>, count=1, size=8) at libavcodec/utils.c:1060
#9  0x0000000000973bdb in encode_picture (picture_number=1, s=0x18f3380) at libavcodec/mpegvideo_enc.c:3418
#10 ff_MPV_encode_picture (avctx=0x18f2d40, pkt=0x7fffffffd9f0, pic_arg=<optimized out>, got_packet=0x7fffffffd76c) at libavcodec/mpegvideo_enc.c:1648
#11 0x0000000000a58374 in avcodec_encode_video2 (avctx=avctx@entry=0x18f2d40, avpkt=avpkt@entry=0x7fffffffd9f0, frame=frame@entry=0x19183a0, got_packet_ptr=got_packet_ptr@entry=0x7fffffffd76c) at libavcodec/utils.c:1892
#12 0x000000000047e0a8 in do_video_out (in_picture=0x19183a0, ost=0x18f31a0, s=0x18f2440) at ffmpeg.c:997
#13 reap_filters () at ffmpeg.c:1157
#14 0x0000000000468128 in transcode_step () at ffmpeg.c:3399
#15 transcode () at ffmpeg.c:3442
#16 main (argc=<optimized out>, argv=<optimized out>) at ffmpeg.c:3622
(gdb) disass $pc-25,$pc+32
Dump of assembler code from 0xb648f0 to 0xb64929:
   0x0000000000b648f0 <sad16_sse2+0>:   movslq %ecx,%rax
   0x0000000000b648f3 <sad16_sse2+3>:   pxor   %xmm2,%xmm2
   0x0000000000b648f7 <sad16_sse2+7>:   nopw   0x0(%rax,%rax,1)
   0x0000000000b64900 <sad16_sse2+16>:  movdqu (%rdx),%xmm0
   0x0000000000b64904 <sad16_sse2+20>:  movdqu (%rdx,%rax,1),%xmm1
=> 0x0000000000b64909 <sad16_sse2+25>:  psadbw (%rsi),%xmm0
   0x0000000000b6490d <sad16_sse2+29>:  psadbw (%rsi,%rax,1),%xmm1
   0x0000000000b64912 <sad16_sse2+34>:  paddw  %xmm0,%xmm2
   0x0000000000b64916 <sad16_sse2+38>:  paddw  %xmm1,%xmm2
   0x0000000000b6491a <sad16_sse2+42>:  lea    (%rdx,%rax,2),%rdx
   0x0000000000b6491e <sad16_sse2+46>:  lea    (%rsi,%rax,2),%rsi
   0x0000000000b64922 <sad16_sse2+50>:  sub    $0x2,%r8d
   0x0000000000b64926 <sad16_sse2+54>:  jg     0xb64900 <sad16_sse2+16>
   0x0000000000b64928 <sad16_sse2+56>:  movhlps %xmm2,%xmm0
End of assembler dump.
(gdb) info all-register
rax            0x100    256
rbx            0x0      0
rcx            0x100    256
rdx            0x1929ac0        26385088
rsi            0x1918968        26315112
rdi            0x18f3380        26162048
rbp            0xc      0xc
rsp            0x7fffffffd188   0x7fffffffd188
r8             0x10     16
r9             0x18f5f60        26173280
r10            0x7fffffffd3f0   140737488344048
r11            0x0      0
r12            0x1      1
r13            0x60     96
r14            0xb648f0 11946224
r15            0x8000   32768
rip            0xb64909 0xb64909 <sad16_sse2+25>
eflags         0x10246  [ PF ZF IF RF ]
cs             0x33     51
ss             0x2b     43
ds             0x0      0
es             0x0      0
fs             0x0      0
gs             0x0      0
st0            -inf     (raw 0xffff0000000000000000)
st1            -nan(0x1557240027f14a)   (raw 0xffff001557240027f14a)
st2            -nan(0x1011600006abc)    (raw 0xffff0001011600006abc)
st3            -nan(0xe1c80000e1c8)     (raw 0xffff0000e1c80000e1c8)
st4            -nan(0x1c3900001c390)    (raw 0xffff0001c3900001c390)
st5            -nan(0x1916185030a82f50) (raw 0xffff1916185030a82f50)
st6            -nan(0x1916316648f85ff8) (raw 0xffff1916316648f85ff8)
st7            -nan(0x000155724)        (raw 0xffff0000000000155724)
fctrl          0x37f    895
fstat          0x0      0
ftag           0xaaaa   43690
fiseg          0x0      0
fioff          0x0      0
foseg          0x0      0
fooff          0x0      0
fop            0x0      0
mxcsr          0x1fa8   [ OE PE IM DM ZM OM UM PM ]
ymm0           {v8_float = {0x94948000, 0x94948000, 0x94948000, 0x94948000, 0x0, 0x0, 0x0, 0x0}, v4_double = {0x8000000000000000, 0x8000000000000000, 0x0, 0x0}, v32_int8 = {0x52 <repeats 16 times>, 0x0 <repeats 16 times>}, v16_int16 = {0x5252, 0x5252, 0x5252, 0x5252, 0x5252, 0x5252, 0x5252, 0x5252, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0}, v8_int32 = {0x52525252, 0x52525252, 0x52525252, 0x52525252, 0x0, 0x0, 0x0, 0x0}, v4_int64 = {0x5252525252525252, 0x5252525252525252, 0x0, 0x0}, v2_int128 = {0x52525252525252525252525252525252, 0x00000000000000000000000000000000}}
ymm1           {v8_float = {0x94948000, 0x94948000, 0x94948000, 0x94948000, 0x0, 0x0, 0x0, 0x0}, v4_double = {0x8000000000000000, 0x8000000000000000, 0x0, 0x0}, v32_int8 = {0x52 <repeats 16 times>, 0x0 <repeats 16 times>}, v16_int16 = {0x5252, 0x5252, 0x5252, 0x5252, 0x5252, 0x5252, 0x5252, 0x5252, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0}, v8_int32 = {0x52525252, 0x52525252, 0x52525252, 0x52525252, 0x0, 0x0, 0x0, 0x0}, v4_int64 = {0x5252525252525252, 0x5252525252525252, 0x0, 0x0}, v2_int128 = {0x52525252525252525252525252525252, 0x00000000000000000000000000000000}}
ymm2           {v8_float = {0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0}, v4_double = {0x0, 0x0, 0x0, 0x0}, v32_int8 = {0x0 <repeats 32 times>}, v16_int16 = {0x0 <repeats 16 times>}, v8_int32 = {0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0}, v4_int64 = {0x0, 0x0, 0x0, 0x0}, v2_int128 = {0x00000000000000000000000000000000, 0x00000000000000000000000000000000}}
ymm3           {v8_float = {0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0}, v4_double = {0x0, 0x0, 0x0, 0x0}, v32_int8 = {0x0 <repeats 32 times>}, v16_int16 = {0x0 <repeats 16 times>}, v8_int32 = {0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0}, v4_int64 = {0x0, 0x0, 0x0, 0x0}, v2_int128 = {0x00000000000000000000000000000000, 0x00000000000000000000000000000000}}
ymm4           {v8_float = {0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0}, v4_double = {0x0, 0x0, 0x0, 0x0}, v32_int8 = {0x7, 0x0, 0x7, 0x0, 0x7, 0x0, 0x7, 0x0, 0x7, 0x0, 0x7, 0x0, 0x7, 0x0, 0x7, 0x0 <repeats 17 times>}, v16_int16 = {0x7, 0x7, 0x7, 0x7, 0x7, 0x7, 0x7, 0x7, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0}, v8_int32 = {0x70007, 0x70007, 0x70007, 0x70007, 0x0, 0x0, 0x0, 0x0}, v4_int64 = {0x7000700070007, 0x7000700070007, 0x0, 0x0}, v2_int128 = {0x00070007000700070007000700070007, 0x00000000000000000000000000000000}}
ymm5           {v8_float = {0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0}, v4_double = {0x0, 0x0, 0x0, 0x0}, v32_int8 = {0x0 <repeats 32 times>}, v16_int16 = {0x0 <repeats 16 times>}, v8_int32 = {0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0}, v4_int64 = {0x0, 0x0, 0x0, 0x0}, v2_int128 = {0x00000000000000000000000000000000, 0x00000000000000000000000000000000}}
ymm6           {v8_float = {0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0}, v4_double = {0x0, 0x0, 0x0, 0x0}, v32_int8 = {0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x80, 0x0 <repeats 24 times>}, v16_int16 = {0x0, 0x0, 0x0, 0x8000, 0x0 <repeats 12 times>}, v8_int32 = {0x0, 0x80000000, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0}, v4_int64 = {0x8000000000000000, 0x0, 0x0, 0x0}, v2_int128 = {0x00000000000000008000000000000000, 0x00000000000000000000000000000000}}
ymm7           {v8_float = {0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0}, v4_double = {0x0, 0x0, 0x0, 0x0}, v32_int8 = {0x7, 0x0, 0x7, 0x0, 0x7, 0x0, 0x7, 0x0, 0x7, 0x0, 0x7, 0x0, 0x7, 0x0, 0x7, 0x0 <repeats 17 times>}, v16_int16 = {0x7, 0x7, 0x7, 0x7, 0x7, 0x7, 0x7, 0x7, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0}, v8_int32 = {0x70007, 0x70007, 0x70007, 0x70007, 0x0, 0x0, 0x0, 0x0}, v4_int64 = {0x7000700070007, 0x7000700070007, 0x0, 0x0}, v2_int128 = {0x00070007000700070007000700070007, 0x00000000000000000000000000000000}}
ymm8           {v8_float = {0x4, 0x0, 0x4, 0x0, 0x0, 0x0, 0x0, 0x0}, v4_double = {0x0, 0x0, 0x0, 0x0}, v32_int8 = {0xde, 0x20, 0x87, 0x40, 0x0, 0x0, 0xde, 0x20, 0xde, 0x20, 0x87, 0x40, 0x0, 0x0, 0xde, 0x20, 0x0 <repeats 16 times>}, v16_int16 = {0x20de, 0x4087, 0x0, 0x20de, 0x20de, 0x4087, 0x0, 0x20de, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0}, v8_int32 = {0x408720de, 0x20de0000, 0x408720de, 0x20de0000, 0x0, 0x0, 0x0, 0x0}, v4_int64 = {0x20de0000408720de, 0x20de0000408720de, 0x0, 0x0}, v2_int128 = {0x20de0000408720de20de0000408720de, 0x00000000000000000000000000000000}}
ymm9           {v8_float = {0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0}, v4_double = {0x0, 0x0, 0x0, 0x0}, v32_int8 = {0x88, 0xc, 0x0, 0x0, 0x87, 0x40, 0x88, 0xc, 0x88, 0xc, 0x0, 0x0, 0x87, 0x40, 0x88, 0xc, 0x0 <repeats 16 times>}, v16_int16 = {0xc88, 0x0, 0x4087, 0xc88, 0xc88, 0x0, 0x4087, 0xc88, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0}, v8_int32 = {0xc88, 0xc884087, 0xc88, 0xc884087, 0x0, 0x0, 0x0, 0x0}, v4_int64 = {0xc88408700000c88, 0xc88408700000c88, 0x0, 0x0}, v2_int128 = {0x0c88408700000c880c88408700000c88, 0x00000000000000000000000000000000}}
ymm10          {v8_float = {0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0}, v4_double = {0x0, 0x0, 0x0, 0x0}, v32_int8 = {0x2, 0x80, 0x3, 0x80, 0x4, 0x80, 0x5, 0x80, 0x8, 0x80, 0x9, 0x80, 0xa, 0x80, 0xb, 0x80, 0x0 <repeats 16 times>}, v16_int16 = {0x8002, 0x8003, 0x8004, 0x8005, 0x8008, 0x8009, 0x800a, 0x800b, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0}, v8_int32 = {0x80038002, 0x80058004, 0x80098008, 0x800b800a, 0x0, 0x0, 0x0, 0x0}, v4_int64 = {0x8005800480038002, 0x800b800a80098008, 0x0, 0x0}, v2_int128 = {0x800b800a800980088005800480038002, 0x00000000000000000000000000000000}}
ymm11          {v8_float = {0x9689a800, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0}, v4_double = {0x0, 0x0, 0x0, 0x0}, v32_int8 = {0x6a, 0xa2, 0x65, 0x50, 0xf2, 0xea, 0x8f, 0xbd, 0x0 <repeats 24 times>}, v16_int16 = {0xa26a, 0x5065, 0xeaf2, 0xbd8f, 0x0 <repeats 12 times>}, v8_int32 = {0x5065a26a, 0xbd8feaf2, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0}, v4_int64 = {0xbd8feaf25065a26a, 0x0, 0x0, 0x0}, v2_int128 = {0x0000000000000000bd8feaf25065a26a, 0x00000000000000000000000000000000}}
ymm12          {v8_float = {0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0}, v4_double = {0x0, 0x0, 0x0, 0x0}, v32_int8 = {0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0xc4, 0x3c, 0x0 <repeats 24 times>}, v16_int16 = {0x0, 0x0, 0x0, 0x3cc4, 0x0 <repeats 12 times>}, v8_int32 = {0x0, 0x3cc40000, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0}, v4_int64 = {0x3cc4000000000000, 0x0, 0x0, 0x0}, v2_int128 = {0x00000000000000003cc4000000000000, 0x00000000000000000000000000000000}}
ymm13          {v8_float = {0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0}, v4_double = {0x0, 0x0, 0x0, 0x0}, v32_int8 = {0x0, 0x0, 0x0, 0x0, 0x0, 0x80, 0x59, 0xbc, 0x0 <repeats 24 times>}, v16_int16 = {0x0, 0x0, 0x8000, 0xbc59, 0x0 <repeats 12 times>}, v8_int32 = {0x0, 0xbc598000, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0}, v4_int64 = {0xbc59800000000000, 0x0, 0x0, 0x0}, v2_int128 = {0x0000000000000000bc59800000000000, 0x00000000000000000000000000000000}}
ymm14          {v8_float = {0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0}, v4_double = {0x0, 0x0, 0x0, 0x0}, v32_int8 = {0x8e, 0x85, 0x83, 0xe8, 0xf0, 0x24, 0x53, 0x3c, 0x0 <repeats 24 times>}, v16_int16 = {0x858e, 0xe883, 0x24f0, 0x3c53, 0x0 <repeats 12 times>}, v8_int32 = {0xe883858e, 0x3c5324f0, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0}, v4_int64 = {0x3c5324f0e883858e, 0x0, 0x0, 0x0}, v2_int128 = {0x00000000000000003c5324f0e883858e, 0x00000000000000000000000000000000}}
ymm15          {v8_float = {0x0, 0x3, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0}, v4_double = {0x2d, 0x0, 0x0, 0x0}, v32_int8 = {0xc0, 0x9, 0xf2, 0x16, 0xb5, 0xdf, 0x46, 0x40, 0x0 <repeats 24 times>}, v16_int16 = {0x9c0, 0x16f2, 0xdfb5, 0x4046, 0x0 <repeats 12 times>}, v8_int32 = {0x16f209c0, 0x4046dfb5, 0x0, 0x0, 0x0, 0x0, 0x0, 0x0}, v4_int64 = {0x4046dfb516f209c0, 0x0, 0x0, 0x0}, v2_int128 = {0x00000000000000004046dfb516f209c0, 0x00000000000000000000000000000000}}

Not reproducible with valgrind.

comment:3 by Michael Niedermayer, 12 years ago

Resolution: fixed
Status: openclosed
Note: See TracTickets for help on using tickets.