avcodec/mpegvideo_enc: dont use direct mode for unaligned input

Fixes Ticket3456

Signed-off-by: Michael Niedermayer <michaelni@gmx.at>